--- a/DataUpdaterGameQuestions/App.config
+++ b/DataUpdaterGameQuestions/App.config
@@ -2,26 +2,29 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="DataUpdaterGameQuestions.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="DataUpdaterGameQuestions.DatabasesSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="DataUpdaterGameQuestions.DatabaseSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <userSettings>
-        <DataUpdaterGameQuestions.Properties.Settings>
-            <setting name="DBConnectionString" serializeAs="String">
-                <value>Server = 127.0.0.1;Uid=root;Password=P@ssw0rd;Database=test;Character Set=utf8;</value>
+        <DataUpdaterGameQuestions.DatabasesSettings>
+            <setting name="showtimeDBconnectionSQL" serializeAs="String">
+                <value>Server = 127.0.0.1;Uid=root;Password=P@ssw0rd;Database=wwtbam;Character Set=utf8;</value>
             </setting>
-            <setting name="QueryForQSelection" serializeAs="String">
-                <value>SELECT * FROM  `gamequestions_newlev` qs where qs.Difficulty=4 LIMIT 1</value>
+            <setting name="QuestionDB_setTable1" serializeAs="String">
+                <value>gamequestions</value>
             </setting>
-            <setting name="QueryQuestionCount" serializeAs="String">
-                <value>SELECT COUNT(QuestionID) AS CC FROM `gamequestions_newlev` WHERE Difficulty = 4</value>
+        </DataUpdaterGameQuestions.DatabasesSettings>
+        <DataUpdaterGameQuestions.DatabaseSettings>
+            <setting name="showtimeDBconnectionSQL" serializeAs="String">
+                <value>showtimeDBconnectionSQL</value>
             </setting>
-            <setting name="gameqTable" serializeAs="String">
-                <value>gamequestions_newlev</value>
+            <setting name="QuestionDB_setTable1" serializeAs="String">
+                <value>QuestionDB_setTable1</value>
             </setting>
-        </DataUpdaterGameQuestions.Properties.Settings>
+        </DataUpdaterGameQuestions.DatabaseSettings>
     </userSettings>
 </configuration>
