Config settings changed, file example added

--- a/DataUpdaterGameQuestions/App.config
+++ b/DataUpdaterGameQuestions/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DataUpdaterGameQuestions.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="DataUpdaterGameQuestions.DatabasesSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="DataUpdaterGameQuestions.DatabaseSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
@@ -10,6 +11,11 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <userSettings>
+        <DataUpdaterGameQuestions.Properties.Settings>
+            <setting name="FileNameWithExtensionForQuestionImport" serializeAs="String">
+                <value>dopolna.txt</value>
+            </setting>
+        </DataUpdaterGameQuestions.Properties.Settings>
         <DataUpdaterGameQuestions.DatabasesSettings>
             <setting name="showtimeDBconnectionSQL" serializeAs="String">
                 <value>Server = 127.0.0.1;Uid=root;Password=P@ssw0rd;Database=wwtbam;Character Set=utf8;</value>
