--- a/ShowControlWeb QuestionManagement/Properties/launchSettings.json
+++ b/ShowControlWeb QuestionManagement/Properties/launchSettings.json
@@ -1,7 +1,11 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/ShowControlWeb QuestionManagement",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:60205",
       "sslPort": 44332
@@ -18,10 +22,10 @@
     "ShowControlWeb_QuestionManagement": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
