--- a/ShowControlWeb QuestionManagement/ShowControlWeb QuestionManagement.csproj
+++ b/ShowControlWeb QuestionManagement/ShowControlWeb QuestionManagement.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>ShowControlWeb_QuestionManagement</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.1" />
