Added MsSql Exporter

--- a/DataUpdaterGameQuestions/App.config
+++ b/DataUpdaterGameQuestions/App.config
@@ -15,6 +15,9 @@
             <setting name="FileNameWithExtensionForQuestionImport" serializeAs="String">
                 <value>dopolna.txt</value>
             </setting>
+            <setting name="FileNameWithoutExtensionForQuestionExport" serializeAs="String">
+                <value>ExportQuestionsFile</value>
+            </setting>
         </DataUpdaterGameQuestions.Properties.Settings>
         <DataUpdaterGameQuestions.DatabasesSettings>
             <setting name="showtimeDBconnectionSQL" serializeAs="String">
