--- a/DataUpdaterGameQuestions/DataUpdaterGameQuestions.csproj
+++ b/DataUpdaterGameQuestions/DataUpdaterGameQuestions.csproj
@@ -64,7 +64,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>DatabasesSettings.settings</DependentUpon>
     </Compile>
-    <Compile Include="MsSqlDataLayer.cs" />
+    <Compile Include="MsSqlDataReaderLayer.cs" />
+    <Compile Include="MsSqlDataWriterLayer.cs" />
+    <Compile Include="MySqlDataWriterLayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
