Config key for mssql db not generated in config file (vs error) fixed

--- a/DataUpdaterGameQuestions/App.config
+++ b/DataUpdaterGameQuestions/App.config
@@ -20,8 +20,11 @@
             </setting>
         </DataUpdaterGameQuestions.Properties.Settings>
         <DataUpdaterGameQuestions.DatabasesSettings>
-            <setting name="showtimeDBconnectionSQL" serializeAs="String">
+            <setting name="showtimeDBconnectionMYSQL" serializeAs="String">
                 <value>Server = 127.0.0.1;Uid=root;Password=P@ssw0rd;Database=wwtbam;Character Set=utf8;</value>
+            </setting>
+            <setting name="showtimeDBconnectionMSSQL" serializeAs="String">
+                <value>server=IDEA-PC\SQLEXPRESS02;database=wwtbam;integrated security=true</value>
             </setting>
             <setting name="QuestionDB_setTable1" serializeAs="String">
                 <value>gamequestions</value>
