--- a/ShowControlWeb QuestionManagement/appsettings.json
+++ b/ShowControlWeb QuestionManagement/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "DbConnectionString_wwtbam": "Data Source=IDEA-PC\\SQLEXPRESS01;Initial Catalog=wwtbam;Integrated Security=True",
+  "DbConnectionString_wwtbam": "Data Source=IDEA-PC\\SQLEXPRESS01;Initial Catalog=tpv;Integrated Security=True",
   "gamequestion_tablename": "gamequestions"  
 }
